--- a/projects/projects.css
+++ b/projects/projects.css
@@ -172,3 +172,7 @@ header {
 .nav-btn:hover {
     background-color: rgba(255, 255, 255, 0.5);
 }
+
+.expanded-description {
+  white-space: pre-line;
+}
